# proSLAM

./: CMakeLists.txt  LICENSE  README.md  contributors.txt  package.xml  pull_srrg_packages.bash
cmake_modules/: FindG2O.cmake  FindQGLViewer.cmake
configurations/: configuration.yaml  configuration_euroc.yaml  configuration_euroc_old.yaml  configuration_icl.yaml  configuration_kitti.yaml  configuration_kitti_10.yaml  configuration_kitti_12.yaml  configuration_kitti_14.yaml  configuration_kitti_fast.yaml  configuration_tum.yaml  configuration_tum_dense.yaml  configuration_tum_freiburg2.yaml  configuration_xtion.yaml
executables/: CMakeLists.txt  README.md  app.cpp  node.cpp  srrg_proslam_node.cpp  stereo_calibrator.cpp  test_g2o_compatibility.cpp  test_stereo_frontend.cpp  trajectory_analyzer.cpp  trajectory_converter.cpp
src/: CMakeLists.txt
src/aligners/: CMakeLists.txt  aligner_factory.h  base_aligner.h  base_cloud_aligner.cpp  base_cloud_aligner.h  base_frame_aligner.cpp  base_frame_aligner.h  base_local_map_aligner.cpp  base_local_map_aligner.h  correspondence.h  correspondence_collection.cpp  correspondence_collection.h  stereouv_aligner.cpp  stereouv_aligner.h  uvd_aligner.cpp  uvd_aligner.h  xyz_aligner.cpp  xyz_aligner.h
src/core/: CMakeLists.txt  gt_mapper.cpp  gt_mapper.h  gt_relocalizer.cpp  gt_relocalizer.h  gt_tracker.cpp  gt_tracker.h  mapper.cpp  mapper.h  relocalizer.cpp  relocalizer.h  tracker.cpp  tracker.h  tracker_svi.cpp  tracker_svi.h
src/executables/: CMakeLists.txt  kitti_evaluate_odometry.cpp  parameter_server.cpp  parameter_server.h  slam_assembly.cpp  slam_assembly.h  srrg_gslam_euroc_app.cpp  srrg_gslam_kitti_app.cpp  srrg_gslam_mapper_app.cpp  srrg_gslam_vibike_app.cpp  srrg_kitti_evaluate_odometry.cpp  srrg_proslam_app.cpp  srrg_proslam_node.cpp
src/frame_generation/: CMakeLists.txt  base_framepoint_generator.cpp  base_framepoint_generator.h  depth_framepoint_generator.cpp  depth_framepoint_generator.h  stereo_framepoint_generator.cpp  stereo_framepoint_generator.h  stereo_triangulator.h
src/framepoint_generation/: CMakeLists.txt  base_framepoint_generator.cpp  base_framepoint_generator.h  depth_framepoint_generator.cpp  depth_framepoint_generator.h  intensity_feature_extractor.h  intensity_feature_matcher.cpp  intensity_feature_matcher.h  stereo_framepoint_generator.cpp  stereo_framepoint_generator.h
src/map_management/: CMakeLists.txt  graph_optimizer.cpp  graph_optimizer.h  mapper.cpp  mapper.h
src/map_optimization/: CMakeLists.txt  graph_optimizer.cpp  graph_optimizer.h
src/motion_estimation/: CMakeLists.txt  base_tracker.cpp  base_tracker.h  depth_tracker.cpp  depth_tracker.h  stereo_tracker.cpp  stereo_tracker.h  tracker.cpp  tracker.h
src/position_tracking/: *grep*  CMakeLists.txt  base_tracker.cpp  base_tracker.h  depth_tracker.cpp  depth_tracker.h  pose_tracker_3d.cpp  pose_tracker_3d.h  stereo_tracker.cpp  stereo_tracker.h
src/relocalization/: CMakeLists.txt  closure.cpp  closure.h  correspondence.h  correspondence_collection.cpp  correspondence_collection.h  landmark_correspondence.h  local_map_correspondence.cpp  local_map_correspondence.h  relocalizer.cpp  relocalizer.h
src/system/: CMakeLists.txt  slam_assembly.cpp  slam_assembly.h
src/triangulation/: CMakeLists.txt  base_framepoint_generator.cpp  stereo_triangulator.cpp  stereo_triangulator.h
src/types/: CMakeLists.txt  appearance.h  base_context.h  camera.cpp  camera.h  definitions.h  frame.cpp  frame.h  frame_point.cpp  frame_point.h  gt_camera.cpp  gt_camera.h  gt_defs.h  gt_optimizer.h  gt_relocalizer_types.h  landmark.cpp  landmark.h  landmark_item.h  local_map.cpp  local_map.h  optimizer.h  parameter.cpp  parameter.h  parameters.cpp  parameters.h  relocalizer_types.h  stereo_grid_detector.cpp  stereo_grid_detector.h  stereo_triangulator.cpp  stereo_triangulator.h  utility.h  world_map.cpp  world_map.h
src/types/aligners/: aligner_factory.cpp  aligner_factory.h  base_aligner.h  pxyz_aligner.cpp  pxyz_aligner.h  stereouv_aligner.cpp  stereouv_aligner.h  uvd_aligner.cpp  uvd_aligner.h  xuvd_aligner.cpp  xuvd_aligner.h  xyz_aligner.cpp  xyz_aligner.h
src/types/contexts/: base_context.h  correspondence_collection.cpp  correspondence_collection.h  frame.cpp  frame.h  gt_frame.cpp  gt_frame.h  gt_keyframe.cpp  gt_keyframe.h  gt_tracking_context.cpp  gt_tracking_context.h  gt_world_context.cpp  gt_world_context.h  local_map.cpp  local_map.h  world_map.cpp  world_map.h
src/types/items/: appearance.h  correspondence.h  frame_point.cpp  frame_point.h  gt_appearance.h  gt_frame_point.cpp  gt_frame_point.h  gt_landmark.cpp  gt_landmark.h  gt_landmark_item.h  landmark.cpp  landmark.h  landmark_item.h
src/ui/: CMakeLists.txt  aligner_viewer.cpp  aligner_viewer.h  gt_tracker_viewer.cpp  gt_tracker_viewer.h  gt_tracking_context_viewer.cpp  gt_tracking_context_viewer.h  gt_viewer_icp.h  simple_point_viewer.cpp  simple_point_viewer.h
src/unittests/: CMakeLists.txt  srrg_gslam_feature_detector_normalization_kitti_app.cpp  srrg_gslam_feature_tracking_kitti_app.cpp  srrg_gslam_feature_triangulation_kitti_app.cpp
src/utilities/: CMakeLists.txt  gt_closure_buffer.cpp  gt_closure_buffer.h  gt_closure_checker.cpp  gt_closure_checker.h  gt_optimizer.h  gt_utility.h
src/visualization/: CMakeLists.txt  image_viewer.cpp  image_viewer.h  map_viewer.cpp  map_viewer.h  viewer_input_images.cpp  viewer_input_images.h  viewer_output_map.cpp  viewer_output_map.h
