<?xml version="1.0"?>
<package>
  <name>srrg_proslam</name>
  <version>0.0.0</version>
  <description>The ProSLAM package</description>
  <maintainer email="schdomin@gmail.com">schdomin</maintainer>
  <license>TBD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
