<?xml version="1.0"?>
<package>
  <name>srrg_proslam</name>
  <version>0.0.0</version>
  <description>The ProSLAM package</description>
  <maintainer email="schdomin@gmail.com">schdomin</maintainer>
  <license>TBD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>srrg_core</build_depend>
  <build_depend>srrg_hbst</build_depend>
  <build_depend>srrg_core_viewers</build_depend>
  <build_depend>srrg_gl_helpers</build_depend>
  <build_depend>g2o_catkin</build_depend>
  <run_depend>srrg_core</run_depend>
  <run_depend>srrg_hbst</run_depend>
  <run_depend>srrg_core_viewers</run_depend>
  <run_depend>srrg_gl_helpers</run_depend>
  <run_depend>g2o_catkin</run_depend>
</package>
