add_executable(srrg_gslam_feature_triangulation_kitti_app srrg_gslam_feature_triangulation_kitti_app.cpp)
add_executable(srrg_gslam_feature_tracking_kitti_app srrg_gslam_feature_tracking_kitti_app.cpp)
add_executable(srrg_gslam_feature_detector_normalization_kitti_app srrg_gslam_feature_detector_normalization_kitti_app.cpp)

target_link_libraries(srrg_gslam_feature_triangulation_kitti_app
  srrg_gslam_ui_library
  srrg_txt_io_library
  srrg_system_utils_library
  ${OpenCV_LIBS}
)

target_link_libraries(srrg_gslam_feature_tracking_kitti_app
  srrg_gslam_ui_library
  srrg_txt_io_library
  srrg_system_utils_library
  ${OpenCV_LIBS}
)

target_link_libraries(srrg_gslam_feature_detector_normalization_kitti_app
  srrg_gslam_ui_library
  srrg_txt_io_library
  srrg_system_utils_library
  ${OpenCV_LIBS}
)
